force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Overwrite_Format_Rules_Lookup__c.field-meta.xml
<CustomField>
    <fullName>cnx__Overwrite_Format_Rules_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option enables or disables the overwriting of the format rules with a custom regex.</description>
    <inlineHelpText>This option enables or disables the overwriting of the format rules with a custom regex.</inlineHelpText>
    <label>Overwrite Format Rules Lookup</label>
    <type>Checkbox</type>
</CustomField>