force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Presence_State_Available_All__c.field-meta.xml
<CustomField>
    <fullName>cnx__Presence_State_Available_All__c</fullName>
    <description>Record ID of the Salesforce Omni-Channel presence status in which all channels are available.</description>
    <inlineHelpText>Record ID of the Salesforce Omni-Channel presence status in which all channels are available</inlineHelpText>
    <label>Presence State Available All</label>
    <length>255</length>
    <type>Text</type>
</CustomField>