force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Presence_State_Busy_All__c.field-meta.xml
<CustomField>
    <fullName>cnx__Presence_State_Busy_All__c</fullName>
    <description>Record ID of the Omni-Channel presence status in which all channels are busy.</description>
    <inlineHelpText>Record ID of the Omni-Channel presence status in which all channels are busy</inlineHelpText>
    <label>Presence State Busy All</label>
    <length>255</length>
    <type>Text</type>
</CustomField>