force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_CallAgentID__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_CallAgentID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this option is set to true, the Dial button in the team section dials the agent ID instead of the agent extension.</description>
    <inlineHelpText>When this option is set to true, the Dial button in the team section dials the agent ID instead of the agent extension.</inlineHelpText>
    <label>Call Agent ID</label>
    <type>Checkbox</type>
</CustomField>