force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_Click_To_Dial_Queue__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_Click_To_Dial_Queue__c</fullName>
    <description>This option allows linking a queue with a click-to-dial number. If a valid configuration exists, a button will appear on the right side in the queues list for that particular queue to execute the click-to-dial.</description>
    <inlineHelpText>This option allows linking a queue with a click-to-dial number. If a valid configuration exists, a button will appear on the right side in the queues list for that particular queue to execute the click-to-dial.</inlineHelpText>
    <label>Click-to-Dial Queue</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>