force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_CriticalNumOfCallsThreshold__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_CriticalNumOfCallsThreshold__c</fullName>
    <defaultValue>10</defaultValue>
    <description>If the number of calls in a queue is equal or greater than this value, the queue gets highlighted red in the view.</description>
    <inlineHelpText>If the number of calls in a queue is equal or greater than this value, the queue gets highlighted red in the view.</inlineHelpText>
    <label>Critical Number of Calls in Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>