force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_CriticalWaitTimeThreshold__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_CriticalWaitTimeThreshold__c</fullName>
    <defaultValue>60</defaultValue>
    <description>If the time for the longest call in a queue is equal or higher than this value (seconds), the queue gets highlighted red in the view.</description>
    <inlineHelpText>If the time for the longest call in a queue is equal or higher than this value (seconds), the queue gets highlighted red in the view.</inlineHelpText>
    <label>Critical Wait Time Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>