force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_FilterMask__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_FilterMask__c</fullName>
    <description>This option will enable / disable the filters for the Team and the Queue View.</description>
    <inlineHelpText>This option will enable / disable the filters for the Team and the Queue View.</inlineHelpText>
    <label>Enable Filtering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TeamState</fullName>
                <label>Team filter enabled</label>
            </value>
            <value>
                <fullName>QueueStats</fullName>
                <label>Queue filter enabled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>