force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_HideTeamView__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_HideTeamView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this option is set to true, the team view will not be shown in the b+s RealtimeView Component.</description>
    <inlineHelpText>If this option is set to true, the team view will not be shown in the b+s RealtimeView Component.</inlineHelpText>
    <label>Hide Team View</label>
    <type>Checkbox</type>
</CustomField>