force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_HighNumOfCallsThreshold__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_HighNumOfCallsThreshold__c</fullName>
    <defaultValue>5</defaultValue>
    <description>If the number of calls in a queue is equal or greater than this value, the queue gets highlighted yellow in the view.</description>
    <inlineHelpText>If the number of calls in a queue is equal or greater than this value, the queue gets highlighted yellow in the view.</inlineHelpText>
    <label>High Number of Calls in Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>