force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_RefreshTimeQueue__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_RefreshTimeQueue__c</fullName>
    <defaultValue>2</defaultValue>
    <description>This option will overwrite the update interval for the QueueView. In a normal Environment it doesn&apos;t have to be overwritten.</description>
    <inlineHelpText>This option will overwrite the update interval for the QueueView. In a normal Environment it doesn&apos;t have to be overwritten.</inlineHelpText>
    <label>Refresh Interval Queue</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>