force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_ShowStateChangeTime__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_ShowStateChangeTime__c</fullName>
    <defaultValue>true</defaultValue>
    <description>With this option it is possible to choose whether to display the column for the time of the last agent state in the team view.</description>
    <inlineHelpText>With this option it is possible to choose whether to display the column for the time of the last agent state in the team view.</inlineHelpText>
    <label>Show State Change Time</label>
    <type>Checkbox</type>
</CustomField>