force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Realtime_SortAgentNameBy__c.field-meta.xml
<CustomField>
    <fullName>cnx__Realtime_SortAgentNameBy__c</fullName>
    <description>Sort the agents by first or last name.</description>
    <inlineHelpText>Sort the agents by first or last name.</inlineHelpText>
    <label>Sort Agent Name By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Name</fullName>
                <default>true</default>
                <label>First Name</label>
            </value>
            <value>
                <fullName>Last Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>