force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Redial_List_Size__c.field-meta.xml
<CustomField>
    <fullName>cnx__Redial_List_Size__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Sets the maximal number of calls displayed in the redial list.</description>
    <inlineHelpText>Sets the maximal number of calls displayed in the redial list.</inlineHelpText>
    <label>Redial List Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>