force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Require_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>cnx__Require_Call_Disposition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, agents are required to select a call disposition for Sales Engagement items.</description>
    <inlineHelpText>If enabled, agents are required to select a call disposition for Sales Engagement items.</inlineHelpText>
    <label>Require Call Disposition</label>
    <type>Checkbox</type>
</CustomField>