force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CC_Agent_Buttons__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CC_Agent_Buttons__c</fullName>
    <defaultValue>&quot;pause;resume;segmentSave;segmentDelete&quot;</defaultValue>
    <label>Agent Buttons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pause</fullName>
            </value>
            <value>
                <fullName>resume</fullName>
            </value>
            <value>
                <fullName>segmentSave</fullName>
            </value>
            <value>
                <fullName>segmentDelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>