force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CC_Call_Status_Interval_ms__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CC_Call_Status_Interval_ms__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Call Status Interval (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>