force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CC_User_ID_Appendix__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CC_User_ID_Appendix__c</fullName>
    <description>This extension gets attached to the cisco username and the combination of both are used to login the user.</description>
    <label>User ID Appendix</label>
    <length>150</length>
    <type>Text</type>
</CustomField>