force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CC_User_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CC_User_ID_Field__c</fullName>
    <description>Define the field on the user object that contains the Calabrio user ID, in order to login.</description>
    <label>User ID Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>