force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CP_Login_Password__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CP_Login_Password__c</fullName>
    <description>Login Password that will be used to authenticate against the Calabrio On-Prem recording server.</description>
    <label>On-Prem server Login Password</label>
    <length>127</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>