force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CP_Login_Username__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CP_Login_Username__c</fullName>
    <description>Login Username that will be used to authenticate against the Calabrio On-Prem recording server.</description>
    <label>On-Prem server Login Username</label>
    <length>127</length>
    <type>Text</type>
</CustomField>