force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CP_Meta_Data_Keys__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CP_Meta_Data_Keys__c</fullName>
    <description>Field name of the Calabrio server metadata field to store Salesforce Task Id.</description>
    <label>Meta Data Keys</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>