force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CP_Recording_Link_Field__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CP_Recording_Link_Field__c</fullName>
    <description>Field name of the Salesforce Activity custom field where the recording link will be stored.</description>
    <label>Recording Link Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>