force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_CP_Recording_Server__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_CP_Recording_Server__c</fullName>
    <description>Calabrio Recording Server.</description>
    <label>Recording Server</label>
    <length>200</length>
    <type>Text</type>
</CustomField>