force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_VP_Query_Server__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_VP_Query_Server__c</fullName>
    <description>Protocol and FQDN of the Verint query server to generate the Recording Link Query.</description>
    <label>Query Server</label>
    <length>200</length>
    <type>Text</type>
</CustomField>