force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_VP_Recording_Server__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_VP_Recording_Server__c</fullName>
    <description>Verint Recording Server.</description>
    <inlineHelpText>recording server URLs with port in the format https://FQDN:port</inlineHelpText>
    <label>Recording Servers</label>
    <length>200</length>
    <type>Text</type>
</CustomField>