force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__RT_VP_User_Login_Required__c.field-meta.xml
<CustomField>
    <fullName>cnx__RT_VP_User_Login_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If auto recording is disabled, this setting needs to be enabled.</description>
    <label>User Login Required</label>
    <type>Checkbox</type>
</CustomField>