force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Screen_Pop_for_Call_Events__c.field-meta.xml
<CustomField>
    <fullName>cnx__Screen_Pop_for_Call_Events__c</fullName>
    <description>With this Configuration you&apos;re able to add different Screen-Pop Types. You can configure if a Screen-Pop gets triggered based on the channel, the direction and the event on an item. Some Directions and Events are only available for the Voice channel.</description>
    <inlineHelpText>With this Configuration you&apos;re able to add different Screen-Pop Types. You can configure if a Screen-Pop gets triggered based on the channel, the direction and the event on an item. Some Directions and Events are only available for the Voice channel.</inlineHelpText>
    <label>Screen Pop for Call Events</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>