force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Search_and_Screen_Pop_Call_Types__c.field-meta.xml
<CustomField>
    <fullName>cnx__Search_and_Screen_Pop_Call_Types__c</fullName>
    <defaultValue>&quot;inbound;outbound;internal&quot;</defaultValue>
    <inlineHelpText>Defines for which calls a search and screen pop using the softphone layout will be triggered.</inlineHelpText>
    <label>Search and Screen Pop for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inbound</fullName>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>outbound</fullName>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>internal</fullName>
                <label>Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>