force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Search_and_Screen_Pop_Variable__c.field-meta.xml
<CustomField>
    <fullName>cnx__Search_and_Screen_Pop_Variable__c</fullName>
    <description>The expression that is searched for in the Salesforce database on inbound calls.</description>
    <inlineHelpText>The expression that is searched for in the Salesforce database on inbound calls</inlineHelpText>
    <label>Search and Screen Pop Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>