force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Service_Presence_Busy_Status__c.field-meta.xml
<CustomField>
    <fullName>cnx__Service_Presence_Busy_Status__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>Defines the states which will be displayed as Online in the gadget.</inlineHelpText>
    <label>deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>