force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Service_Presence_Online_Status_v2__c.field-meta.xml
<CustomField>
    <fullName>cnx__Service_Presence_Online_Status_v2__c</fullName>
    <description>Defines the states which will be displayed as Online in the gadget.</description>
    <inlineHelpText>Defines the states which will be displayed as Online in the gadget.</inlineHelpText>
    <label>Service Presence Online Status</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>