force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Service_Presence_Status_While_Talking__c.field-meta.xml
<CustomField>
    <fullName>cnx__Service_Presence_Status_While_Talking__c</fullName>
    <description>Defines the status the agent automatically will switch to, during a call.</description>
    <inlineHelpText>Defines the status the agent automatically will switch to, during a call.</inlineHelpText>
    <label>Service Presence Status While Talking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>