force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Show_Call_Log_Comment_Field__c.field-meta.xml
<CustomField>
    <fullName>cnx__Show_Call_Log_Comment_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If set to true, the call activity section is extended with an activity note field.</description>
    <inlineHelpText>If set to true, the call activity section is extended with an activity note field.</inlineHelpText>
    <label>Show Call Log Comment Field</label>
    <type>Checkbox</type>
</CustomField>