force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Show_Supervisor_Monitoring_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>cnx__Show_Supervisor_Monitoring_to_Agent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If set to true, agents see an eye icon if they are being supervised.</description>
    <inlineHelpText>If set to true, agents see an eye icon if they are being supervised.</inlineHelpText>
    <label>Show Supervisor Monitoring to Agent</label>
    <type>Checkbox</type>
</CustomField>