force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Softphone_Height__c.field-meta.xml
<CustomField>
    <fullName>cnx__Softphone_Height__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Initial softphone height.</description>
    <inlineHelpText>Initial softphone height</inlineHelpText>
    <label>Softphone Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>