force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Softphone_Width__c.field-meta.xml
<CustomField>
    <fullName>cnx__Softphone_Width__c</fullName>
    <defaultValue>300</defaultValue>
    <description>Initial softphone width.</description>
    <inlineHelpText>Initial softphone width</inlineHelpText>
    <label>Softphone Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>