force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Support_Chat_Button_State__c.field-meta.xml
<CustomField>
    <fullName>cnx__Support_Chat_Button_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting has to be checked in order to switch the chat button to offline, if all agents are talking or on full capacity.</description>
    <inlineHelpText>This setting has to be checked in order to switch the chat button to offline, if all agents are talking or on full capacity.</inlineHelpText>
    <label>Support Chat Button State</label>
    <type>Checkbox</type>
</CustomField>