force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Switch_to_Talking_State_on_Reserved__c.field-meta.xml
<CustomField>
    <fullName>cnx__Switch_to_Talking_State_on_Reserved__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If set to true the state will be switched to the talking state when an incoming call is received.</description>
    <inlineHelpText>If set to true the state will be switched to the talking state when an incoming call is received.</inlineHelpText>
    <label>Switch to Talking State on Reserved</label>
    <type>Checkbox</type>
</CustomField>