force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Types_To_Include_In_Directory_Lookup__c.field-meta.xml
<CustomField>
    <fullName>cnx__Types_To_Include_In_Directory_Lookup__c</fullName>
    <defaultValue>&quot;User;Lead;Contact;Account;AdditionalNumber&quot;</defaultValue>
    <description>Types to include in Directory Lookup.</description>
    <label>Types to include in Directory Lookup.</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>AdditionalNumber</fullName>
                <label>Additional Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>