force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Use_Legacy_Media_Routing__c.field-meta.xml
<CustomField>
    <fullName>cnx__Use_Legacy_Media_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use of Legacy Media Routing is required for CCE 11.0 or older.</description>
    <inlineHelpText>Required for CCE 11.0 or older.</inlineHelpText>
    <label>Use Legacy Cisco Universal Queue</label>
    <type>Checkbox</type>
</CustomField>