force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Variable_for_Record_Sharing__c.field-meta.xml
<CustomField>
    <fullName>cnx__Variable_for_Record_Sharing__c</fullName>
    <defaultValue>&quot;PV10&quot;</defaultValue>
    <description>The peripheral variable (PV1-PV10) or ECC variable that is used to transport shared record information to the consulted agent.</description>
    <inlineHelpText>The peripheral variable (PV1-PV10) or ECC variable that is used to transport shared record information to the
        consulted agent.</inlineHelpText>
    <label>Variable for Record Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>