force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Voice_New_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>cnx__Voice_New_Record_URL__c</fullName>
    <defaultValue>&quot;[{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;00Q/e?Phone={ANI}\&quot;},{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;001/e?Phone={ANI}\&quot;},{\&quot;key\&quot;: \&quot;\&quot;, \&quot;value\&quot;: \&quot;003/e?Phone={ANI}\&quot;}]&quot;</defaultValue>
    <description>New Record URLs are displayed on incoming calls.</description>
    <inlineHelpText>New Record URLs are displayed on incoming calls. These configuration settings are used for enabling and configuring these links.</inlineHelpText>
    <label>New Record URLs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>