force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__WCCAI_Tenant__c.field-meta.xml
<CustomField>
    <fullName>cnx__WCCAI_Tenant__c</fullName>
    <defaultValue>&quot;us1&quot;</defaultValue>
    <description>The tenant to connect to in order to receive voice transcripts powered by WCCAI.</description>
    <inlineHelpText>The tenant to connect to in order to receive voice transcripts powered by WCCAI.</inlineHelpText>
    <label>WCCAI Tenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>