force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Work_Item_Id_Variable__c.field-meta.xml
<CustomField>
    <fullName>cnx__Work_Item_Id_Variable__c</fullName>
    <description>Variable used to transfer the Salesforce work item ID with the Routing Adapter.</description>
    <inlineHelpText>Variable used to transfer the Salesforce work item ID with the Routing Adapter</inlineHelpText>
    <label>Work Item Id Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>