force-app/main/default/objects/cnx__Connects_Configuration__c/recordTypes/cnx__Model_S.recordType-meta.xml
<RecordType>
    <fullName>cnx__Model_S</fullName>
    <active>true</active>
    <label>Model S</label>
</RecordType>