force-app/main/default/objects/cnx__Connects_Configuration__c/recordTypes/cnx__Salesforce_Omni_Channel.recordType-meta.xml
<RecordType>
    <fullName>cnx__Salesforce_Omni_Channel</fullName>
    <active>true</active>
    <label>Salesforce Omni-Channel</label>
</RecordType>