force-app/main/default/objects/cnx__Connects_Configuration__c/recordTypes/cnx__Universal_Queue.recordType-meta.xml
<RecordType>
    <fullName>cnx__Universal_Queue</fullName>
    <active>true</active>
    <label>Cisco Universal Queue</label>
</RecordType>