force-app/main/default/objects/cnx__Connects_Configuration__c/recordTypes/cnx__Universal_Queue_Legacy.recordType-meta.xml
<RecordType>
    <fullName>cnx__Universal_Queue_Legacy</fullName>
    <active>true</active>
    <label>Cisco Universal Queue (Legacy)</label>
</RecordType>