force-app/main/default/objects/cnx__Connects_Configuration__c/recordTypes/cnx__Voice_Only.recordType-meta.xml
<RecordType>
    <fullName>cnx__Voice_Only</fullName>
    <active>true</active>
    <label>Voice Only</label>
</RecordType>