force-app/main/default/objects/cnx__Connects_Configuration__c/listViews/cnx__All.listView-meta.xml
<ListView>
    <fullName>cnx__All</fullName>
    <columns>NAME</columns>
    <columns>cnx__Is_Default__c</columns>
    <columns>cnx__Description__c</columns>
    <columns>cnx__Call_Log_Variable_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>